syntax = "proto3";

package webitel.chat.bot;

import "entity.proto";

service BotService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
  rpc AddProfile(AddProfileRequest) returns (AddProfileResponse) {}
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
}

message SendMessageRequest {
  string session_id = 1;
  int64 profile_id = 2;
  int64 conversation_id = 3;
  entity.Message message = 4;
}

message SendMessageResponse {
  entity.Error error = 1;
}

message AddProfileRequest {
  entity.Profile profile = 1;
}

message AddProfileResponse {
  entity.Error error = 1;
}

message DeleteProfileRequest {
  int64 profile_id = 1;
}

message DeleteProfileResponse {
  entity.Error error = 1;
}